--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -3,6 +3,7 @@
 @import '@fontsource/roboto/500.css';
 @import '@fontsource/roboto/700.css';
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
 * {
   box-sizing: border-box;
@@ -13,7 +14,7 @@
 html,
 body {
   min-height: 100%;
-  font-family: 'Playfair Display', 'Roboto', sans-serif;
+  font-family: 'Playfair Display', 'Inter', 'Roboto', sans-serif;
 }
 
 #__next {
